провел разведочный анализ

--- a/project.ipynb
+++ b/project.ipynb
@@ -7,12 +7,34 @@
    "source": [
     "# Классификация и сегментация клиентов iFood\n",
     "\n",
-    "### Постановка задачи\n",
     "\n",
-    "### Компания iFood собирает данные о клиентах и их покупках. Цель — понять поведение клиентов, выделить сегменты (кластеризация) и научиться предсказывать, откликнется ли клиент на маркетинговую кампанию (классификация, целевая переменная - Response).\n",
-    "\n",
-    "### Подключение модулей\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe399c26-6fa3-4cce-a6f2-53398719d06f",
+   "metadata": {},
+   "source": [
+    "### Постановка задачи\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b92ecd1-f204-45bb-8853-bddcbb3b7568",
+   "metadata": {},
+   "source": [
+    "### Компания iFood собирает данные о клиентах и их покупках. Цель — понять поведение клиентов, выделить сегменты (кластеризация) и научиться предсказывать, откликнется ли клиент на маркетинговую кампанию (классификация, целевая переменная - Response).\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e8573a5-4fd1-4191-9618-677b7c8eabfb",
+   "metadata": {},
+   "source": [
+    "### Подключение модулей"
    ]
   },
   {
@@ -117,6 +139,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c2f999e6-fc35-4a27-8c8b-ccbb9c11188f",
+   "metadata": {},
+   "source": [
+    "Распределение целевой переменной"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d440ef01-2b19-4585-8a45-5fa745f960a8",
@@ -132,12 +162,172 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2f60ce0c-e01f-4745-84ad-66a626f2bc07",
+   "metadata": {},
+   "source": [
+    "Класс сильно несбалансирован — около 85% клиентов не откликнулись"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed3ce5cc-ee66-4c16-8210-20faa138aeb0",
+   "metadata": {},
+   "source": [
+    "# Разведочный анализ и визуализация"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d39d5f78-8b65-4c3c-a4a3-6d696680f4fb",
+   "metadata": {},
+   "source": [
+    "### Корреляционная тепловая карта"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4dabc51-d55b-4719-b814-a57dec2a900a",
+   "id": "78c1c143-84ea-4f64-8702-8f87c18190cf",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.figure(figsize=(14,10))\n",
+    "corr = df.corr(numeric_only=True)\n",
+    "mask = np.triu(np.ones_like(corr, dtype=bool))\n",
+    "sns.heatmap(corr, mask=mask, cmap='RdBu_r', linewidths=0.4, center=0)\n",
+    "plt.title('Матрица корреляций')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee3bdffd-d803-45fa-8d9d-e29a8420fcea",
+   "metadata": {},
+   "source": [
+    "Самые сильные связи - между доходом и общими тратами, а также между тратами на вино и общими тратами"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "043473c4-d2bb-485d-9f01-3231ebd8d020",
+   "metadata": {},
+   "source": [
+    "### Распределения ключевых признаков"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d8fcb07-10ad-46d6-b66f-bd4b3c55cc55",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "key_cols = ['Income', 'MntTotal', 'Age', 'Recency', 'NumWebVisitsMonth']\n",
+    "\n",
+    "fig, axes = plt.subplots(2, 3, figsize=(15,8))\n",
+    "axes = axes.ravel()\n",
+    "\n",
+    "for i, col in enumerate(key_cols):\n",
+    "    sns.histplot(df[col], kde=True, ax=axes[i], color='teal')\n",
+    "    axes[i].set_title(f'Распределение {col}')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f47f0116-8078-4396-a81a-1cc5ac9c19ce",
+   "metadata": {},
+   "source": [
+    "### Распределения ключевых признаков"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d65ce56f-69a9-418b-8f3f-1322864821e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "key_cols = ['Income', 'MntTotal', 'Age', 'Recency', 'NumWebVisitsMonth']\n",
+    "\n",
+    "fig, axes = plt.subplots(2, 3, figsize=(15,8))\n",
+    "axes = axes.ravel()\n",
+    "\n",
+    "for i, col in enumerate(key_cols):\n",
+    "    sns.histplot(df[col], kde=True, ax=axes[i], color='teal')\n",
+    "    axes[i].set_title(f'Распределение {col}')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e2f3fa0-0c86-477b-9ce2-fb6ef3ff5221",
+   "metadata": {},
+   "source": [
+    "Доход и общие траты имеют сильный правый хвост — большинство клиентов со средним и ниже среднего уровнем"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a4372d5-1d12-4a4f-86ef-916eca9eed4f",
+   "metadata": {},
+   "source": [
+    "### Затраты по категориям в зависимости от отклика"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "792cdcdf-d38f-4d0b-b199-8ea84c3fca39",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "import matplotlib as mpl\n",
+    "warnings.filterwarnings(\"ignore\", message=\".*vert.*deprecated.*\")\n",
+    "warnings.filterwarnings(\"ignore\", category=UserWarning, module=\"matplotlib\")\n",
+    "warnings.filterwarnings(\"ignore\", category=DeprecationWarning, module=\"matplotlib\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "001d12ca-2271-4a7f-81b3-ff48a7ebf7c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(12, 6))\n",
+    "\n",
+    "sns.boxplot(x='Категория', y='Сумма', hue='Response', data=df_melt, palette='Set2')\n",
+    "\n",
+    "plt.yscale('log')\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.title('Затраты по категориям — отклик vs неотклик')\n",
+    "plt.legend(title='Отклик (0 — нет, 1 — да)')\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fab93aeb-50db-4a07-9784-2b330c213a91",
+   "metadata": {},
+   "source": [
+    "Клиенты, откликнувшиеся на кампанию, значительно больше тратят на вино и мясные продукты"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "afdfe09b-8250-4c29-b463-88a6a8602ea4",
+   "metadata": {},
+   "source": [
+    "обновил"
+   ]
   }
  ],
  "metadata": {
