--- a/project.ipynb
+++ b/project.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "id": "6b44e4a4-cb5b-4f4a-81b2-49013310c9a7",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "id": "ae8400d6-a873-49bc-a4c1-18ad63dc533a",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "id": "06fd6a3f-0cc8-4c23-ace9-34e3061eb062",
    "metadata": {},
    "outputs": [
@@ -289,7 +289,7 @@
        "[5 rows x 39 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "id": "5a0beaab-3590-437b-8938-1bf5bbdf4ffe",
    "metadata": {},
    "outputs": [
@@ -334,7 +334,7 @@
        "(2205, 39)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "id": "16b1e63f-8850-4636-ac7e-895db35e43ce",
    "metadata": {},
    "outputs": [
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "id": "e3928567-4d5c-4cfc-9333-bb72da0c8d79",
    "metadata": {},
    "outputs": [
@@ -708,13 +708,143 @@
        "[8 rows x 39 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.describe().round(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bfc0a4a5-5796-4f23-acf9-5e6cdbd716fd",
+   "metadata": {},
+   "source": [
+    "# Нормализация"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "e63a7b5d-f676-438d-96ac-e5b61b66de5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Отрицательный доход: 0\n",
+      "Отрицательный возраст: 0\n",
+      "Отрицательные траты: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Отрицательный доход:\", (df['Income'] < 0).sum())\n",
+    "print(\"Отрицательный возраст:\", (df['Age'] < 0).sum())\n",
+    "print(\"Отрицательные траты:\", df[['MntWines', 'MntFruits', 'MntMeatProducts', 'MntFishProducts', 'MntSweetProducts', 'MntGoldProds']].lt(0).sum().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "d4919e1d-2e0f-4f4c-aaf6-fb6201855a80",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Топ-5 самых больших доходов:\n",
+      "1872    113734.0\n",
+      "628     105471.0\n",
+      "238     102692.0\n",
+      "190     102160.0\n",
+      "115     101970.0\n",
+      "Name: Income, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\nТоп-5 самых больших доходов:\")\n",
+    "print(df['Income'].nlargest(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "a6952e46-51f2-40ba-8eb3-548300d2d29d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Удалено строк с аномальным доходом: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_clean = df[df['Income'] <= 300_000].copy()\n",
+    "print(f\"\\nУдалено строк с аномальным доходом: {len(df) - len(df_clean)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "8d4d6cee-4e87-417e-9815-848f4912211a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Данные нормализованы (StandardScaler применён к числовым признакам)\n",
+      "Первые 3 строки нормализованного df:\n",
+      "     Income   Kidhome  Teenhome   Recency  MntWines  MntFruits  \\\n",
+      "0  0.314651 -0.823405 -0.930767  0.310830  0.974566   1.548614   \n",
+      "1 -0.254877  1.038757  0.906602 -0.380600 -0.874776  -0.638664   \n",
+      "2  0.965354 -0.823405 -0.930767 -0.795458  0.355155   0.568110   \n",
+      "\n",
+      "   MntMeatProducts  MntFishProducts  MntSweetProducts  MntGoldProds  ...  \\\n",
+      "0         1.748400         2.449154          1.480301      0.849556  ...   \n",
+      "1        -0.731678        -0.652345         -0.635399     -0.735767  ...   \n",
+      "2        -0.175957         1.336263         -0.149031     -0.039771  ...   \n",
+      "\n",
+      "   marital_Together  marital_Widow  education_2n Cycle  education_Basic  \\\n",
+      "0         -0.589047      -0.188938           -0.314093        -0.158444   \n",
+      "1         -0.589047      -0.188938           -0.314093        -0.158444   \n",
+      "2          1.697658      -0.188938           -0.314093        -0.158444   \n",
+      "\n",
+      "   education_Graduation  education_Master  education_PhD  MntTotal  \\\n",
+      "0              0.990521         -0.444656      -0.524694  1.678056   \n",
+      "1              0.990521         -0.444656      -0.524694 -0.940880   \n",
+      "2              0.990521         -0.444656      -0.524694  0.297384   \n",
+      "\n",
+      "   MntRegularProds  AcceptedCmpOverall  \n",
+      "0         1.665625           -0.439991  \n",
+      "1        -0.909676           -0.439991  \n",
+      "2         0.312960           -0.439991  \n",
+      "\n",
+      "[3 rows x 39 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numeric_cols = df_clean.select_dtypes(include=['float64', 'int64']).columns\n",
+    "numeric_cols = numeric_cols.drop(['Response'], errors='ignore')\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "df_clean[numeric_cols] = scaler.fit_transform(df_clean[numeric_cols])\n",
+    "\n",
+    "print(\"\\nДанные нормализованы\")\n",
+    "print(\"Первые 3 строки нормализованного df:\")\n",
+    "print(df_clean.head(3))"
    ]
   },
   {
@@ -727,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "id": "d440ef01-2b19-4585-8a45-5fa745f960a8",
    "metadata": {},
    "outputs": [
@@ -777,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "id": "78c1c143-84ea-4f64-8702-8f87c18190cf",
    "metadata": {},
    "outputs": [
@@ -819,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 15,
    "id": "5d8fcb07-10ad-46d6-b66f-bd4b3c55cc55",
    "metadata": {},
    "outputs": [
@@ -858,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 16,
    "id": "d65ce56f-69a9-418b-8f3f-1322864821e4",
    "metadata": {},
    "outputs": [
@@ -905,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 17,
    "id": "792cdcdf-d38f-4d0b-b199-8ea84c3fca39",
    "metadata": {},
    "outputs": [],
@@ -919,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 18,
    "id": "ad55739d-afd9-4e51-98f5-271f56f18535",
    "metadata": {},
    "outputs": [
@@ -949,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 19,
    "id": "001d12ca-2271-4a7f-81b3-ff48a7ebf7c2",
    "metadata": {},
    "outputs": [
@@ -1009,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 20,
    "id": "bcbe8b5b-3e82-4f06-8b3c-ecae1b9a9656",
    "metadata": {},
    "outputs": [],
@@ -1049,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 21,
    "id": "93f2c4de-f292-4b85-8af1-0a7d2b23dbb7",
    "metadata": {},
    "outputs": [
@@ -1105,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 22,
    "id": "f39ee163-3cc0-4d0f-9651-6d6f9d85f07f",
    "metadata": {},
    "outputs": [
@@ -1159,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 23,
    "id": "8f0117b1-bd9f-4df4-bf0d-3e0244a96026",
    "metadata": {},
    "outputs": [
@@ -1213,7 +1343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 24,
    "id": "93d232b4-c4a3-4102-a322-e3772c8c95b6",
    "metadata": {},
    "outputs": [
@@ -1397,7 +1527,7 @@
        "[3 rows x 21 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1429,7 +1559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 25,
    "id": "d08664d4-ce2c-4ff3-af92-bfb82dcb6812",
    "metadata": {},
    "outputs": [
@@ -1518,7 +1648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 26,
    "id": "f1dee0ed-02f2-49c4-97c7-bb70054f64d8",
    "metadata": {},
    "outputs": [],
@@ -1545,7 +1675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 27,
    "id": "8004be0c-5597-4f51-b389-dc2d5e6b0024",
    "metadata": {},
    "outputs": [
@@ -1600,7 +1730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 28,
    "id": "9282d18b-bc30-4084-b2a1-0c2e4030e7d9",
    "metadata": {},
    "outputs": [
@@ -1655,7 +1785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 29,
    "id": "111629c4-2953-4da6-a99e-d5560b480f45",
    "metadata": {},
    "outputs": [
@@ -1702,7 +1832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 30,
    "id": "da5bbcfd-e427-480c-9f75-837c1fe81113",
    "metadata": {},
    "outputs": [
@@ -1745,7 +1875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 31,
    "id": "56f43747-8118-4118-b52e-03dea0ef99a9",
    "metadata": {},
    "outputs": [
@@ -1762,6 +1892,14 @@
     "joblib.dump(rf, 'ifood_classification_model.pkl')\n",
     "print(\"Модель Random Forest сохранена\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2637c765-50d4-4de0-89b3-7104ad013f61",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
